Created POST users/search by email endpoint
